WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89589
[Chromium] Damage tracker is not used without partial swap, causing valid render passes to be removed
https://bugs.webkit.org/show_bug.cgi?id=89589
Summary
[Chromium] Damage tracker is not used without partial swap, causing valid ren...
zlieber
Reported
2012-06-20 11:40:16 PDT
[Chromium] html5-demos.appspot.com/static/webaudio/createMediaSourceElement.html broken
Attachments
Patch
(14.11 KB, patch)
2012-06-20 12:35 PDT
,
zlieber
no flags
Details
Formatted Diff
Diff
Patch
(14.14 KB, patch)
2012-06-20 13:26 PDT
,
zlieber
no flags
Details
Formatted Diff
Diff
Patch
(14.18 KB, patch)
2012-06-20 15:04 PDT
,
zlieber
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
zlieber
Comment 1
2012-06-20 12:35:08 PDT
Created
attachment 148629
[details]
Patch
Dana Jansens
Comment 2
2012-06-20 12:40:34 PDT
Comment on
attachment 148629
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=148629&action=review
> Source/WebCore/ChangeLog:3 > + [Chromium] html5-demos.appspot.com/static/webaudio/createMediaSourceElement.html broken
Can you name this after what the patch is doing?
zlieber
Comment 3
2012-06-20 13:26:09 PDT
Created
attachment 148643
[details]
Patch
Adrienne Walker
Comment 4
2012-06-20 13:27:21 PDT
Comment on
attachment 148643
[details]
Patch R=me. Thanks for the quick fix.
WebKit Review Bot
Comment 5
2012-06-20 14:22:21 PDT
Comment on
attachment 148643
[details]
Patch Rejecting
attachment 148643
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebKit/chromium/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/13010038
zlieber
Comment 6
2012-06-20 15:04:32 PDT
Created
attachment 148662
[details]
Patch
WebKit Review Bot
Comment 7
2012-06-20 17:43:25 PDT
Comment on
attachment 148662
[details]
Patch Clearing flags on attachment: 148662 Committed
r120889
: <
http://trac.webkit.org/changeset/120889
>
WebKit Review Bot
Comment 8
2012-06-20 17:43:29 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 9
2012-06-20 18:56:17 PDT
Re-opened since this is blocked by 89630
Adrienne Walker
Comment 10
2012-06-20 22:26:47 PDT
Comment on
attachment 148662
[details]
Patch Let's give this another CQ+.
WebKit Review Bot
Comment 11
2012-06-20 22:40:13 PDT
Comment on
attachment 148662
[details]
Patch Clearing flags on attachment: 148662 Committed
r120904
: <
http://trac.webkit.org/changeset/120904
>
WebKit Review Bot
Comment 12
2012-06-20 22:40:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug